objects/OPP_ContractLink__c.object
<CustomObject>
    <description>Contract Link</description>
    <fields>
        <fullName>ActiveContract__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdditionalDiscount__c</fullName>
        <label>Additional Discount (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approver10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Links9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Links1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCOGrossMarginAmount__c</fullName>
        <formula>Amount__c *  CCOGrossMargin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount x CCO Gross Margin (%) (at the Contract Link level)</inlineHelpText>
        <label>CCO Gross Margin (Amount)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CCOGrossMargin__c</fullName>
        <inlineHelpText>CCO Gross Margin is the sum of the statutory gross margin and upstream standard margin allocation coming from factories and distribution centers</inlineHelpText>
        <label>CCO Gross Margin (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ContractContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Contact from the Account receiving the Contract</inlineHelpText>
        <label>Contract Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contract Links</relationshipLabel>
        <relationshipName>Contract_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractIDInLegacySystem__c</fullName>
        <label>Contract ID In Legacy System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractReadyApproval__c</fullName>
        <formula>IF(ActiveContract__c = False, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;&quot;) &amp; &quot; The Contract needs to be &apos;Active&apos; before being sent for Approval&quot;,

IF( OR(ISPICKVAL( ContractStatus__c, &quot;Approved&quot;), ISPICKVAL( ContractStatus__c, &quot;Closed&quot;), ISPICKVAL( ContractStatus__c, &quot;Approval in Progress&quot;), ISPICKVAL( ContractStatus__c, &quot;Clarification in Progress&quot;)), &quot;&quot;, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;&quot;) &amp; &quot; Your Contract is ready to be sent for Approval&quot; ))</formula>
        <label>Contract Readiness for Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractStatus__c</fullName>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Approval in Progress</fullName>
                </value>
                <value>
                    <fullName>Clarification in Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContractSubmissionDate__c</fullName>
        <inlineHelpText>Date when the Account is expecting the Contract to be sent</inlineHelpText>
        <label>Contract Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractTo__c</fullName>
        <formula>OpportunityName__r.Account.Name</formula>
        <label>Contract To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractValidityEndDate__c</fullName>
        <label>Contract Validity End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractValidityStartDate__c</fullName>
        <label>Contract Validity Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CountryOfLegacySystem__c</fullName>
        <label>Country Of Legacy System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>need to get values for this field</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurrentApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_LinksIfuR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EscalationDate__c</fullName>
        <inlineHelpText>Date of Submission for Approval of the Contract</inlineHelpText>
        <label>Escalation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IssuedContractDatetoAccount__c</fullName>
        <inlineHelpText>Date when the Contract has been sent to the Account</inlineHelpText>
        <label>Issued Contract Date to Account</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_LinksIfub</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastSavedDateintheLegacySystem__c</fullName>
        <label>Last Saved Date in the Legacy System</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastSynchronizationDate__c</fullName>
        <label>Last Synchronization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <label>Legacy System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>need to get values for this field</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpportunityName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contract Links</relationshipLabel>
        <relationshipName>Contract_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StandardDiscount__c</fullName>
        <label>Standard Discount (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>StatusInLegacySystem__c</fullName>
        <label>Status In Legacy System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>need to get values for this field</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <description>Display the position of the current approver over the total number of approvers.</description>
        <formula>IF( Approver10__c != null , TEXT(TECH_ApprovalStep__c) &amp; &quot;/10&quot;,IF( Approver9__c != null , TEXT(TECH_ApprovalStep__c) &amp; &quot;/9&quot;, IF( Approver8__c != null , TEXT(TECH_ApprovalStep__c) &amp; &quot;/8&quot;, IF( Approver7__c != null , TEXT(TECH_ApprovalStep__c) &amp; &quot;/7&quot;, IF( Approver6__c != null , TEXT(TECH_ApprovalStep__c) &amp; &quot;/6&quot;, IF( Approver5__c != null , TEXT(TECH_ApprovalStep__c) &amp; &quot;/5&quot;, IF( Approver4__c != null , TEXT(TECH_ApprovalStep__c) &amp; &quot;/4&quot;, IF( Approver3__c != null , TEXT(TECH_ApprovalStep__c) &amp; &quot;/3&quot;, IF( Approver2__c != null , TEXT(TECH_ApprovalStep__c) &amp; &quot;/2&quot;, IF( Approver1__c != null , TEXT(TECH_ApprovalStep__c) &amp; &quot;/1&quot;, &quot;&quot;))))))))))</formula>
        <label>Step</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SynchronizationMessage__c</fullName>
        <label>Synchronization Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_ApprovalStep__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TECH_ApprovalStep</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_IsBoundToBackOffice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TECH_IsBoundToBackOffice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TECH_IsSyncNeededForOpp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TECH_IsSyncNeededForOpp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TECH_IsSynchronizationNeeded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TECH_IsSynchronizationNeeded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TotalDiscount__c</fullName>
        <inlineHelpText>Total discount of the Contract in the Legacy System</inlineHelpText>
        <label>Total Discount (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Contract Link</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CLK-{YY}{MM}-{0000}</displayFormat>
        <label>Contract Link Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Links</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>GrantAccessToApprover__c</fullName>
        <label>Grant Access To Approver</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>GrantAccessToDelegatedApprover__c</fullName>
        <label>Grant Access To Delegated Approver</label>
    </sharingReasons>
    <validationRules>
        <fullName>CLK_VR01_ApproverVerify</fullName>
        <active>true</active>
        <description>SR0 - Approvers must be entered sequentially</description>
        <errorConditionFormula>IF( NOT(ISBLANK( Approver8__c)) &amp;&amp; ISBLANK( Approver7__c) , true, IF( NOT(ISBLANK( Approver7__c)) &amp;&amp; ISBLANK( Approver6__c) , true, IF( NOT(ISBLANK( Approver6__c)) &amp;&amp; ISBLANK( Approver5__c) , true, IF( NOT(ISBLANK( Approver5__c)) &amp;&amp; ISBLANK( Approver4__c) , true, IF( NOT(ISBLANK( Approver4__c)) &amp;&amp; ISBLANK( Approver3__c) , true, IF( NOT(ISBLANK( Approver3__c)) &amp;&amp; ISBLANK( Approver2__c) , true, IF( NOT(ISBLANK( Approver2__c)) &amp;&amp; ISBLANK( Approver1__c) , true, false) ) ) ) ) ) ) &amp;&amp; NOT($User.BypassVR__c)</errorConditionFormula>
        <errorMessage>You must complete Approvers sequentially.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CLK_VR02_OnOpportunityChange</fullName>
        <active>true</active>
        <description>Opportunity Name should not be changed on Contract Link</description>
        <errorConditionFormula>ISCHANGED(OpportunityName__c) &amp;&amp;  NOT($User.BypassVR__c)</errorConditionFormula>
        <errorDisplayField>OpportunityName__c</errorDisplayField>
        <errorMessage>Opportunity Name cannot be changed.</errorMessage>
    </validationRules>
</CustomObject>